src/syntax/parse/snapshots/dilaria__syntax__parse__test__block__empty.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Block {
    stmts: [],
    span: Span(
        0..0,
    ),
}
