src/syntax/parse/snapshots/dilaria__syntax__parse__test__block__nested.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Block {
    stmts: [
        Block(
            Block {
                stmts: [],
                span: Span(
                    0..0,
                ),
            },
        ),
    ],
    span: Span(
        0..0,
    ),
}
