src/syntax/parse/snapshots/dilaria__syntax__parse__test__block__two_expressions.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
Block {
    stmts: [
        Expr(
            Literal(
                Number(
                    10.0,
                    Span(
                        0..0,
                    ),
                ),
            ),
        ),
        Expr(
            Literal(
                Number(
                    20.0,
                    Span(
                        0..0,
                    ),
                ),
            ),
        ),
    ],
    span: Span(
        0..0,
    ),
}
